solved footer overflow problem

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -32,7 +32,7 @@
 }
 
 .footer-main {
-  flex: 3;
+  /* flex: 3; */
   display: flex;
   align-items: flex-start;
 }
@@ -55,7 +55,7 @@
 }
 
 .footer-logo img {
-  width: 250px;
+  width: 230px;
   /* margin-top: -59px;
   margin-bottom: -30px; */
   transform: rotate(-90deg);
@@ -180,10 +180,13 @@
   .footer-logo img {
     width: 230px;
     transform: rotate(0deg);
+    margin-top: -1rem;
+    margin-bottom: -3rem;
   }
 
   .footer-responsive-top-side {
     flex-direction: column;
+    row-gap: 3rem;
     width: 100%;
     align-items: center;
   }
@@ -231,12 +234,12 @@
   }
 
   .footer-logo img {
-    width: 95%;
+    width: 80%;
     transform: rotate(0deg);
     /* margin-top: -170px; */
-    margin-left: 50px;
-    margin-bottom: -108px;
-    margin-top: -165px;
+    margin-left: 83px;
+    margin-bottom: -35px;
+    margin-top: -110px;
   }
 
   /* @media screen and (min-width: 1024px) and (max-width: 1223px) {
